@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 d10cb23a599c92a2b8679ad16af6d8199c40872f ChangeLog
+SHA1 5655ecb5c423c31ef4961e184f637e9c6e823fbc ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 80e6a779f72f4bd13520923a1eecdd3ba7ee5365 META.yml
+SHA1 cad68278768653092df7ac2dd6b098e8bd38ef7d META.yml
 SHA1 14e358b68232b26478c491ba66290d4dc07ae02a Makefile.PL
 SHA1 dd0ef50a94b1bbe303b0f05c353dfe97cda04f3b README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 66a83baadb45901e21e42ce43b4d5f191127914e lib/Term/Menus.pm
+SHA1 f0e9edcc71b17a17394dda597b2c22fce8fb4e0f lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk1KC78ACgkQdsVAdUjO9IkP4gCghDtD0WSoJUDh4EIgaJx/Ix0n
-V/AAn394IA2c/gi4ymtOhmdKN0UMpjI5
-=0gfJ
+iEYEARECAAYFAk1KE6oACgkQdsVAdUjO9In+FgCgp66elrYmO855jDq67BHc2DjK
+EWkAn2kbvsN+JvYjS2QKVWJUj1Y/MNju
+=n01o
 -----END PGP SIGNATURE-----
